[no.39] :bug: Fix ‘border-table’ overflow on mobile screen

--- a/39-admin-space-control/src/scss/style.scss
+++ b/39-admin-space-control/src/scss/style.scss
@@ -22,10 +22,16 @@ a:active {
     align-items: center;
     background: $secondary-color;
     height: 40px;
+    border: 1px solid red;
 }
 
 .header__left {
     display: flex;
+}
+
+.header__logo {
+    width: 100%;
+    // height: 40px;
 }
 
 .header__title {
@@ -110,14 +116,18 @@ a:active {
 
 // Main & Panel
 .main-board {
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
+    display: block;
     margin-top: 20px;
+    border: 1px solid red;
 }
 
 .panel {
-    flex: 1 1 50%;
-    padding: 25px;
+    // flex: 1 1 100%;
+    width: 100%;
+    padding: 20px;
+    border: 1px solid green;
 }
 
 .panel__container {
@@ -139,12 +149,11 @@ a:active {
 // Fahrest distance
 .farthest__content {
     text-align: center;
-    margin: 2.5em 0;
 }
 
 .farthest__number {
     display: block;
-    font-size: 4.5em;
+    font-size: 2.5em;
     font-weight: $weight-700;
     line-height: 1.3;
 }
@@ -154,9 +163,22 @@ a:active {
     font-size: 0.875em;
 }
 
+// Probe distances
+.bar-chart {
+    display: block;
+    width: 100%;
+    max-width: 24em;
+    margin: 0 auto;
+}
+
 // Probe details
+.table-wrapper {
+    overflow-x: auto;
+}
+
 .border-table {
     width: 100%;
+    min-width: 30em;
 }
 
 .border-table__caption {
@@ -170,7 +192,7 @@ a:active {
 
 .border-table__title,
 .border-table__cell {
-    padding: 10px;
+    padding: 8px;
     text-align: left;
 }
 
